correcting spacing on the person and project page templates

--- a/opentech/static_src/src/sass/components/_wrapper.scss
+++ b/opentech/static_src/src/sass/components/_wrapper.scss
@@ -150,16 +150,33 @@
         border: 1px solid $color--tomato;
     }
 
-    &--person {
+    &--top-inner-space {
+        padding: 20px 0;
+
         @include media-query(tablet-portrait) {
             padding: 3rem 0;
         }
     }
 
+    &--top-inner-space-small {
+        padding: 20px 0;
+    }
+
+    &--top-outer-space {
+        margin: 20px 0;
+
+        @include media-query(tablet-portrait) {
+            margin: 3rem 0;
+        }
+    }
+
+    &--top-outer-space-small {
+        margin: 20px 0 0;
+    }
+
     &--sidebar {
         display: flex;
         flex-direction: column;
-        padding: 20px 0;
 
         @include media-query(tablet-portrait) {
             flex-direction: row;
@@ -171,9 +188,11 @@
 
         > div:first-child {
             flex: 1;
+            margin-bottom: 20px;
 
             @include media-query(tablet-portrait) {
                 padding-right: 20px;
+                margin-bottom: 0;
             }
         }
     }
